--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sunbolin.mytestapplication">
+    package="com.sbl.recordvoice">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.example.sunbolin.mytestapplication.VoiceTestActivity">
+        <activity android:name=".ui.RecordVoiceDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
