--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
+    ext.kotlin_version = "1.5.10"
+
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        maven { url "https://jitpack.io" }
         google()
+        mavenCentral()
         jcenter()
     }
 }
